# moody-s_datahub

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  TODO.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
mkdocs/: api_reference.md  examples.ipynb  git documentation.md  how_to_get_started.ipynb  how_to_get_started.md  moody-s datahub.md  moodys_datahub-0.0.1-py3-none-any.whl  reference - utils.md  reference.md
mkdocs/.ipynb_checkpoints/: how_to_get_started-checkpoint.ipynb
moodys_datahub/: sftp_connection.py  sftp_data.py  sftp_selection.py  sftp_utils.py  sftp_widgets.py  tools.py  utils.py
moodys_datahub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
moodys_datahub/data/: data_dict.xlsx  data_products - Kopi.xlsx  data_products.xlsx  date_cols.xlsx
moodys_datahub/moodys_datahub.egg-info/: SOURCES.txt
moodys_datahub/src/: connection.py  extra.py  load_data.py  process.py  selection.py  utils.py  widgets.py
orbis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/moodys_datahub/: __init__.py  connection.py  extra.py  load_data.py  preflight.py  process.py  selection.py  tools.py  utils.py  widgets.py
src/moodys_datahub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/moodys_datahub/data/: data_dict.xlsx  data_dict_available.xlsx  data_products.xlsx  date_cols.xlsx  products.xlsx
tests/: test_extra.py  test_load_data.py  test_metadata_selection_connection.py  test_process_and_tools.py  test_utils_basic.py  test_utils_io.py  test_widgets.py
