[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodys_datahub"
version = "1.1.0"
description = "Python tools for accessing and processing Moody's DataHub exports via SFTP."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Kristoffer Gulmark Poulsen", email = "kgp.lib@cbs.dk"}
]
keywords = ["moodys", "datahub", "sftp", "data-engineering", "finance-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastavro",
    "ipywidgets",
    "numpy",
    "openpyxl",
    "pandas",
    "paramiko==3.5.1",
    "polars",
    "psutil",
    "pyarrow",
    "pysftp",
    "rapidfuzz",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/CBS-HPC/moody-s_datahub"
Documentation = "https://cbs-hpc.github.io/moody-s_datahub/"
Repository = "https://github.com/CBS-HPC/moody-s_datahub"
Issues = "https://github.com/CBS-HPC/moody-s_datahub/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
    "twine",
]

# Tell setuptools where to find packages (src layout)
[tool.setuptools.packages.find]
where = ["src"]
include = ["moodys_datahub*"]  # The asterisk is critical!



# Include data files inside the package
[tool.setuptools.package-data]
moodys_datahub = [
    "data/bvd_numbers.txt",
    "data/country_codes.xlsx",
    "data/data_dict.xlsx",
    "data/data_products.xlsx",
    "data/date_cols.xlsx",
    "data/products.xlsx",
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
# Source roots for import resolution
src = ["src"]
exclude = [
  "dist",
  "*.egg-info",
  "*.ipynb",
  "mkdocs",
  "mkdocs/.ipynb_checkpoints",
  ".venv",
  "build",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # flake8-bugbear
]
ignore = [
  # example: ignore line length if that’s too strict for now
  # remove E501 from here if you want line length enforced
  "E501",
]
